<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travelling</string>
    <string name="onboarding_title">Tu App de Viajes</string>
    <string name="onboarding_subtitle">Hola, estamos buscando a millones de usuaruis con inquietudes y ganas de viajar. Si eres tú no lo dudes y accede a nuestra app y descubriras miles de destinos y facilidades para alquilar coches, ver el tiempo…</string>
    <string name="homeTitle">Upcoming meetups</string>
    <string name="homeCard1Info">USA, Los Angeles - 2 Weeks</string>
    <string name="homeCard1Title">City of Los Angeles</string>
    <string name="homeCard2Info">Madives - 3weeks</string>
    <string name="homeCard2Title">Beach vacation</string>
    <string name="forgotPassword"><![CDATA[Forgot password <b>Get new</b>]]></string>
    <string name="createAccount"><![CDATA[Do you have account? <b>Create now</b>]]></string>
    <string name="loginTitle">Login</string>
    <string name="loginButtonText">Login</string>
    <string name="travelling">travellingAppName</string>
    <string name="getNew">GetNew</string>
    <string name="register">Register</string>
    <string name="me_apunto">Me apunto</string>
    <string name="privacyPolicy"><![CDATA[Política de privacidad <b>Ver Condiciones</b>]]></string>
    <string name="name_hint">¿Cómo te llamas?</string>
    <string name="name_surname_error">Ups, no creo que sea correcto, revísalo</string>
    <string name="age_error">Esta app no es para ti</string>
    <string name="menu_castle_icon">Castle</string>
    <string name="menu_car_icon">Car</string>
    <string name="login_dialog_ok">Entendido</string>
    <string name="login_dialog_title">Usuario y contraseña no válidos</string>
    <string name="login_dialog_description">Por favor, compruebe su usuario y contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>